unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/ints__Yodlee_Cobrand_Credentials__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Yodlee Cobrand Credentials</label>
</CustomObject>