unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/FromDate_Attribute_value__c.field-meta.xml
<CustomField>
    <fullName>FromDate_Attribute_value__c</fullName>
    <inlineHelpText>Specify the number of days from when you want to get the Transactions.</inlineHelpText>
    <label>FromDate Attribute value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>