unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__APP_ID__c.field-meta.xml
<CustomField>
    <fullName>ints__APP_ID__c</fullName>
    <label>APP ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>