unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__APP_Secret__c.field-meta.xml
<CustomField>
    <fullName>ints__APP_Secret__c</fullName>
    <label>APP Secret</label>
    <length>255</length>
    <type>Text</type>
</CustomField>