unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Application_Key__c.field-meta.xml
<CustomField>
    <fullName>ints__Application_Key__c</fullName>
    <label>Application Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>