unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Auto_Register_User__c.field-meta.xml
<CustomField>
    <fullName>ints__Auto_Register_User__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Register User</label>
    <type>Checkbox</type>
</CustomField>