unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Callback_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Callback_URL__c</fullName>
    <label>Callback URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>