unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Cobrand_id__c.field-meta.xml
<CustomField>
    <fullName>ints__Cobrand_id__c</fullName>
    <label>Cobrand Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>