unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Cobrand_Username__c.field-meta.xml
<CustomField>
    <fullName>ints__Cobrand_Username__c</fullName>
    <label>Cobrand Username</label>
    <length>255</length>
    <type>Text</type>
</CustomField>