unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Node_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Node_URL__c</fullName>
    <label>Node URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>