unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Rest_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Rest_URL__c</fullName>
    <label>Rest URL</label>
    <type>Url</type>
</CustomField>