unpackaged/main/default/objects/ints__Yodlee_Cobrand_Credentials__c/fields/ints__Soap_URL__c.field-meta.xml
<CustomField>
    <fullName>ints__Soap_URL__c</fullName>
    <label>Soap URL</label>
    <type>Url</type>
</CustomField>